adjusted the padding between the 2nd and 3rd sections and the footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer class="homepage-footer">
     <h2>Contact</h2>
     <address>
       123 Way 456 Street<br>
